--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Welcome to Oscar's AI and Robotics homepage!
+description: Feel free to keep an eye on my project updates and exchange your great ideas here!
